--- a/TeX_files/chapter01.tex
+++ b/TeX_files/chapter01.tex
@@ -1,5 +1,23 @@
-\chapter{The importance of Algorithms}
-\section{Algorithms}
-what is Algorithm ? 
+\chapter{Competitive programming}
+\section{Introduction}
+The core in ``competitive programming" is `` Given well-known Computer-Science problems, solve them quickly as possible!".
 \newline
-An Algorithm is a well defined procedure
+The term ``well-known CS problems" implies that in-competitive programming, we are dealing with solved problems and not research problems. so their must be at least one person solved this problem before. the idea behind this is to produce working code that can solve these problems with efficiency and within the time limit, so speed is critical and speed is already a very natural human behavior.
+\newline
+\bf Abridged Problem Description:
+\newline
+\normalfont 
+Let (x, y) be the coordinates of a student's house on a 2D plane. There are 2N students
+and we want to pair them into N groups. Let d i be the distance between the houses
+of 2 students in group i. Form N groups such that cost = N
+i=1 d i is minimized.
+Output the minimum cost. Constraints: 1 ≤ N ≤ 8 and 0 ≤ x, y ≤ 1000.
+\newline
+Sample input:
+N = 2; Coordinates of the 2N = 4 houses are {1, 1}, {8, 6}, {6, 8}, and {1, 3}.
+\newline
+Sample output:
+cost = 4.83.
+\newline
+Can you solve this problem?\newline
+If so, how many minutes would you likely require to complete the working code?\newline
