--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \maketitle
 \title{\textbf{Introduction}}
 \chapter*{Preface}
-
+Before there were computers, there were  algorithms. with the evolution of computers, more algorithms exists, and algorithms is the main key of computing.
 \tableofcontents
 \mainmatter
 \include{./TeX_files/chapter01}
